fix alignment

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 3em;
     
     
 }
@@ -18,6 +19,7 @@ header {
     background-color: #1F2937;
     padding: 5px;
     border-radius: 5px;
+    
     
 }
 
@@ -35,6 +37,7 @@ main {
     display: flex;
     flex: 1;
     flex-direction: column;
+    gap: 2em
 }
 
 .lower {
@@ -50,32 +53,43 @@ main {
     border: 3px #3882F6 solid;
     display: flex;
     border-radius: 5px;
+    width: 200px;
+    height: 170px;
     
 }
 
 .banner {
     background-color: #3882F6;
     color: #E5E7EB;
-    border-radius: 3px;
-    padding: 2em;
-    margin: 2em 5em;
+    border-radius: 10px;
+    font-weight: 600;
+    padding: 1em;
     display: flex;
-    justify-content: space-between;
+    margin: auto;
+    justify-content: space-around;
+    align-items: center;
+    gap: 2em;
 }
 .banner-btn {
     display: flex;
-    flex-wrap: nowrap;
+    border: 5px #E5E7EB solid;
+    flex-shrink: 0;
 }
 
 .cards { 
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    gap: 1em;
+    max-width: min-content;
+    gap: 5em; 
     
 
 }
-
+.upper {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+}
 
 .lower {
     display: flex;
@@ -93,6 +107,7 @@ main {
     font-size: 36px;
     font-weight: 900;
     color: #3882F6;
+    margin-bottom: 1em;
 
 }
 
@@ -100,9 +115,16 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 500;
+    
 
 }
-
+ .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+ }
 
 .top { 
     display: flex;
@@ -124,6 +146,7 @@ main {
 
  .header-img {
     display: flex;
+    flex-shrink: 0;
  }
 
  .logo {
